# codebase-analyzer

./: .gitignore  CHANGELOG.md  LESSONS_LEARNED.md  README.md  ROADMAP.md  TASKS.md  codebase-analyzer-spec.md  pyproject.toml
src/codebase_analyzer/: __init__.py  analyzer.py  cli.py  output.py  relationships.py  state.py  walker.py
src/codebase_analyzer/profiles/: config.yaml  devops.yaml  go.yaml  java.yaml  javascript.yaml  php.yaml  python.yaml  ruby.yaml  rust.yaml  sql.yaml  templates.yaml  web.yaml
src/codebase_analyzer/prompts/: config.txt  go.txt  java.txt  javascript.txt  python.txt  ruby.txt  shell.txt  sql.txt
tasks/2026-03-30_analyzer-engine/: TASK.md
tasks/2026-03-30_cli-wiring/: TASK.md
tasks/2026-03-30_file-walker/: TASK.md
tasks/2026-03-30_output-generation/: TASK.md
tasks/2026-03-30_project-scaffolding/: TASK.md
tasks/2026-03-30_sqlite-state-layer/: TASK.md
tasks/2026-03-31_bearer-token-auth/: TASK.md
tasks/2026-03-31_streaming-support/: TASK.md
tests/: test_analyzer.py  test_cli.py  test_integration.py  test_output.py  test_state.py  test_walker.py
